force-app/main/default/objects/AIViolationRule__c/AIViolationRule__c.object-meta.xml
<CustomObject>
    <description>Defines a rule used to detect a guarded behavior or risky intent in an AI-assisted workflow, either by deterministic Apex logic or by AI evaluation. Each rule can trigger violations and optionally block a response.</description>
    <label>AI Violation Rule</label>
    <nameField>
        <label>AI Violation Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>📏 AI Violation Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>