force-app/main/default/objects/AIViolationRule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this rule is currently being checked.</description>
    <inlineHelpText>Turn this off to disable a rule without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>