force-app/main/default/objects/AIViolationRule__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>The Agent this rule applies to.</description>
    <inlineHelpText>Required for AI Evaluated rules, since the detection instruction is compiled directly into that Agent&apos;s system prompt.</inlineHelpText>
    <label>Agent</label>
    <referenceTo>AIAgent__c</referenceTo>
    <relationshipLabel>AI Violation Rules</relationshipLabel>
    <relationshipName>AI_Violation_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>