force-app/main/default/objects/AIViolationRule__c/fields/AIDetectionInstruction__c.field-meta.xml
<CustomField>
    <fullName>AIDetectionInstruction__c</fullName>
    <description>The instruction given to the AI describing what to watch for, used only when Detection Method is AI Evaluated.</description>
    <inlineHelpText>Describe the behavior this rule should detect in plain language. Be specific — this becomes part of the Agent&apos;s own instructions.</inlineHelpText>
    <label>AI Detection Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>