force-app/main/default/objects/AIViolationRule__c/fields/BlockRequest__c.field-meta.xml
<CustomField>
    <fullName>BlockRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether triggering this rule blocks the response, or only logs it while allowing processing to continue.</description>
    <inlineHelpText>Turn this on for anything that should never be allowed to proceed. For AI Evaluated rules, it is recommended to leave this off initially and review real firings before enabling, since AI-based detection is inherently less exact than a deterministic check.</inlineHelpText>
    <label>Block Request</label>
    <type>Checkbox</type>
</CustomField>