force-app/main/default/objects/AIViolationRule__c/fields/DetectionMethod__c.field-meta.xml
<CustomField>
    <fullName>DetectionMethod__c</fullName>
    <description>Determines whether Apex checks this rule against structured data, or the AI watches for it within the conversation.</description>
    <inlineHelpText>Choose Deterministic — Apex for anything checkable against configuration or usage data directly. Choose AI Evaluated only for intent-based conditions Apex cannot reliably check on its own, such as a free-text request to export bulk data.</inlineHelpText>
    <label>Detection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deterministic_Apex</fullName>
                <label>Deterministic — Apex</label>
            </value>
            <value>
                <fullName>AI_Evaluated</fullName>
                <label>AI Evaluated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>