force-app/main/default/objects/AIViolationRule__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>A unique, code-friendly identifier for this violation rule, used for direct reference in Apex, Flow, or configuration rather than the display name.</description>
    <inlineHelpText>Use a short, unique, no-spaces identifier (e.g. bulk_export_attempt) so this rule can be referenced reliably in code or config even if the display name changes.</inlineHelpText>
    <label>Developer Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>