force-app/main/default/objects/AIViolationRule__c/fields/LastTriggeredDate__c.field-meta.xml
<CustomField>
    <fullName>LastTriggeredDate__c</fullName>
    <description>The most recent date this rule detected a violation.</description>
    <inlineHelpText>Updated automatically each time this rule produces an AI Violation record.</inlineHelpText>
    <label>Last Triggered Date</label>
    <type>Date</type>
</CustomField>