force-app/main/default/objects/AIViolationRule__c/fields/RuleName__c.field-meta.xml
<CustomField>
    <fullName>RuleName__c</fullName>
    <description>The display name of this rule. Name it after the specific behavior it is meant to detect, such as Bulk Export Attempt.</description>
    <inlineHelpText>Use a clear rule name that describes the specific behavior being detected, such as Bulk Export Attempt.</inlineHelpText>
    <label>Rule Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>