force-app/main/default/objects/AIViolationRule__c/fields/SignalTag__c.field-meta.xml
<CustomField>
    <fullName>SignalTag__c</fullName>
    <description>The exact structured tag the AI must output if it detects this condition, parsed deterministically by Apex rather than inferred from prose.</description>
    <inlineHelpText>Define a unique tag the AI should emit if it detects this condition, such as VIOLATION_BULK_EXPORT_ATTEMPT. Apex looks for this exact tag in the response — the AI&apos;s free-text explanation is never trusted directly. Must be unique across all rules.</inlineHelpText>
    <label>Signal Tag</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>