force-app/main/default/objects/AIViolationRule__c/fields/TriggerCount__c.field-meta.xml
<CustomField>
    <fullName>TriggerCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The running total of times this rule has detected a violation.</description>
    <inlineHelpText>Incremented automatically each time this rule produces an AI Violation record.</inlineHelpText>
    <label>Trigger Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>