force-app/main/default/objects/AIViolationRule__c/fields/ViolationTypeProduced__c.field-meta.xml
<CustomField>
    <fullName>ViolationTypeProduced__c</fullName>
    <description>The Violation Type recorded on AI_Violation__c when this rule fires.</description>
    <inlineHelpText>Choose the category this rule should log a violation as.</inlineHelpText>
    <label>Violation Type Produced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unauthorized_Data_Access</fullName>
                <label>Unauthorized Data Access</label>
            </value>
            <value>
                <fullName>Unauthorized_Workflow_Action</fullName>
                <label>Unauthorized Workflow Action</label>
            </value>
            <value>
                <fullName>Usage_Limit_Exceeded</fullName>
                <label>Usage Limit Exceeded</label>
            </value>
            <value>
                <fullName>PII_Masking_Failure</fullName>
                <label>PII Masking Failure</label>
            </value>
            <value>
                <fullName>Configuration_Violation</fullName>
                <label>Configuration Violation</label>
            </value>
            <value>
                <fullName>AI_Flagged_Intent</fullName>
                <label>AI Flagged Intent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>