force-app/main/default/objects/AIViolationRule__c/validationRules/InstructionRequiredForAI.validationRule-meta.xml
<ValidationRule>
    <fullName>InstructionRequiredForAI</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(DetectionMethod__c) = $Label.AI_Violation_Rule_Detection_Method_AI_Evaluated &amp;&amp; ISBLANK(AIDetectionInstruction__c)</errorConditionFormula>
    <errorDisplayField>AIDetectionInstruction__c</errorDisplayField>
    <errorMessage>AI Detection Instruction is required when Detection Method is AI Evaluated.</errorMessage>
</ValidationRule>