force-app/main/default/objects/AIViolationRule__c/validationRules/SignalTagRequiredForAI.validationRule-meta.xml
<ValidationRule>
    <fullName>SignalTagRequiredForAI</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(DetectionMethod__c) = $Label.AI_Violation_Rule_Detection_Method_AI_Evaluated &amp;&amp; ISBLANK(SignalTag__c)</errorConditionFormula>
    <errorDisplayField>SignalTag__c</errorDisplayField>
    <errorMessage>Signal Tag is required when Detection Method is AI Evaluated.</errorMessage>
</ValidationRule>