force-app/main/default/objects/AIViolationRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>DetectionMethod__c</columns>
    <columns>ViolationTypeProduced__c</columns>
    <columns>BlockRequest__c</columns>
    <columns>Agent__c</columns>
    <columns>SignalTag__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>